--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/elements/styles.css">
-    <link rel="stylesheet" href="demo.css">
-    <script src="dist/elements/elements.js"></script>
+    <link rel="stylesheet" href="./../dist/elements/styles.css">
+    <link rel="stylesheet" href="./demo.css">
+    <script src="./../dist/elements/elements.js"></script>
 </head>
 <body>
     <div class="webcomponents">
